# zephyr

./: .gitignore  README.md
.github/workflows/: cppcheck.yml  main.yml  run_cppcheck.yml  schedule.yml
file/: FACTORY_DATA.md  Partition.md  README.md  build_script.ps1  west.yml
file/app/: CMakeLists.txt  Kconfig  Kconfig.audio  Kconfig.btshell  Kconfig.segno  Kconfig.version  aria-mcuboot-key.pem  debug.conf  mcuboot.conf  mcuboot.patch  pm_static.yml  prj_evt1.conf  prj_evt2.conf  version.conf
file/app/child_image/: hci_rpmsg.conf
file/app/cppcheck_includes/: autoconf.h
file/app/memfault_config/: memfault_platform_config.h  memfault_trace_reason_user_config.def
file/app/src/: barometer_thread.cpp  barometer_thread.h  factory_data.h  fault_handler.cpp  fault_handler.h  haptic_motor_handler.cpp  haptic_motor_handler.h  imu_sensor_thread.cpp  imu_sensor_thread.h  main.cpp  mem_mgr_thread.cpp  mem_mgr_thread.h  memfault_platform_port.c  microphone_thread.cpp  microphone_thread.h  network_thread.cpp  network_thread.h  ptx30_thread.cpp  ptx30_thread.h  segno_thread.cpp  segno_thread.h  session_thread.cpp  session_thread.h  shell_commands.c  shell_commands.cpp  temp_sensor_thread.cpp  temp_sensor_thread.h  watchdog.c  watchdog.h
file/app/src/data_storage/: barometer_config.cpp  barometer_config.h  data_storage.cpp  data_storage.h  factory_config.cpp  factory_config.h  haptic_config.cpp  haptic_config.h  imu_config.cpp  imu_config.h  mic_config.cpp  mic_config.h  shrd_config.cpp  shrd_config.h
file/ble_shell_python3/ble_console/: BlueZ_communication.py  BluetoothConsole.py  TerminalNotebook.py
file/scripts/: convert_to_JSON.py  memfault_env_setup.sh  partition_manager.py  upload_elf_to_memfault.sh  upload_ota_release_to_memfault.sh
file/zephyr/: module.yml
